# ChangeLog for dev-libs/expat
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/expat/ChangeLog,v 1.24 2003/11/09 09:31:24 mr_bones_ Exp $

*expat-1.95.7 (09 Nov 2003)

  09 Nov 2003; Michael Sterrett <mr_bones_@gentoo.org> expat-1.95.7.ebuild:
  version bump; (bug 32832) - the claim is that the patch isn't needed anymore.
  Also, modified the ebuild to use parallel make again in the hope that it's
  been fixed upstream.

  23 Sep 2003; Bartosch Pixa <darkspecter@gentoo.org> expat-1.95.6-r1.ebuild:
  set ppc in keywords

  17 Sep 2003; Jon Portnoy <avenj@gentoo.org> expat-1.95.6-r1.ebuild :
  ia64 keywords.

  24 Jun 2003; Aron Griffis <agriffis@gentoo.org> expat-1.95.6-r1.ebuild:
  Mark stable on alpha

*expat-1.95.6-r1 (17 Mar 2003)

  16 Jun 2003; Guy Martin <gmsoft@gento.org> expat-1.95.6-r1.ebuild :
  Added hppa to KEYWORDS.

  02 Apr 2003; Christian Birchinger <joker@gentoo.org> expat-1.95.6-r1.ebuild:
  Added stable sparc keyword

  17 Mar 2003; Patrick Kursawe <phosphan@gentoo.org> :
  added patch xmlstatus to fix problem described in
  sourceforge request 676844 and gentoo bug 17426
  (that made pwlib build fail)

*expat-1.95.6 (09 Mar 2003)

  29 May 2003; Zach Welch <zwelch@gentoo.org expat-1.95.6-r1.ebuild,
  expat-1.95.6.ebuild:
  add arm keyword

  09 Mar 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Version bump.

  21 Feb 2003; Zach Welch <zwelch@gentoo.org> :
  Added arm to keywords.

  07 Feb 2003; Guy Martin <gmsoft@gentoo.org> :
  Added hppa to keywords.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords

*expat-1.95.5-r1 (02 Dec 2002)

  02 Dec 2002; Seemant Kulleen <seemant@gentoo.org> expat-1.95.5-r1.ebuild
  files/digest-expat-1.95.5-r1 :

  Man page is now installed in FHS correct location.  Small enough package
  that I version bumped.  Closes bug #11236 by k8la@arrl.net (Thomas M.
  Beaudry)

*expat-1.95.5 (11 Nov 2002)
