@@ -1,12 +1,12 @@
-MD5 ef7a19ca3ce4912edb5b7aef531d0243 ChangeLog 3252
+MD5 70a407e9dcecae153ff1f0beea6dd215 ChangeLog 3363
 MD5 70e5406badb63940bf1388e392e43069 expat-1.95.4.ebuild 763
 MD5 85e3c4c30a0e46bd0803dc410b50a379 expat-1.95.5-r1.ebuild 635
-MD5 b491cb6535e8573b9aae6d59b24a46b3 expat-1.95.6-r1.ebuild 746
+MD5 d7a8ee059bff8323b9603017720ae8dd expat-1.95.6-r1.ebuild 751
 MD5 6f2ad6357337fe02abdccf7554ec8b81 expat-1.95.6.ebuild 631
-MD5 add1aefd0405e915928c6de379984daa expat-1.95.7.ebuild 658
+MD5 009ad795ed70ddcde72d85839f9ad3c9 expat-1.95.7.ebuild 664
 MD5 7868bf2a29b820e0358f371167bc740f files/digest-expat-1.95.4 64
 MD5 a39abdca141d50129afe4aeccd400e19 files/digest-expat-1.95.5-r1 64
 MD5 5a60260c06d2a4e63854a754788998ac files/digest-expat-1.95.6 64
 MD5 5a60260c06d2a4e63854a754788998ac files/digest-expat-1.95.6-r1 64
-MD5 fc080bb7f4438c40244db79d3a22b63e files/xmlstatus.patch 846
 MD5 0137bf2c738329ab03f266ac859b4613 files/digest-expat-1.95.7 64
+MD5 fc080bb7f4438c40244db79d3a22b63e files/xmlstatus.patch 846
