@@ -1,8 +1,8 @@
-MD5 ee5f5aad241e2188d734c1eb8a6e47f0 ChangeLog 3258
+MD5 e92fc9660e8912462ebf70309d8cd66c ChangeLog 3368
 MD5 c767a4a018af19b7ae9e252844628e2e libpcre-3.9-r1.ebuild 732
 MD5 6597d35bf7d63e6accb9b0719f5f3058 libpcre-3.9-r2.ebuild 743
 MD5 7dcdef4d7a38afb50e792e33a0452982 libpcre-3.9.ebuild 708
-MD5 538bd78e569da819bdeb7e0aa7c01594 libpcre-4.2-r1.ebuild 838
+MD5 8ff184b96c44c67930e8d83e176b0512 libpcre-4.2-r1.ebuild 843
 MD5 ffcde26b49cd8eca185f1f1b1f6ed470 libpcre-4.4.ebuild 858
 MD5 0baca84ddbe0223b3e71da8f829841bc files/digest-libpcre-3.9 61
 MD5 0baca84ddbe0223b3e71da8f829841bc files/digest-libpcre-3.9-r1 61
