@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/glib
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.57 2003/11/15 23:48:20 gmsoft Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.58 2003/12/29 02:54:02 kumba Exp $
+
+  28 Dec 2003; Joshua Kinard <kumba@gentoo.org> glib-2.2.3.ebuild:
+  Move to mips stable (~mips -> mips)
 
   08 Nov 2003; Todd Sunderlin <todd@gentoo.org> glib-2.2.3.ebuild:
   added sparc keyword
