@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/expat
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/expat/ChangeLog,v 1.24 2003/11/09 09:31:24 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/expat/ChangeLog,v 1.25 2003/12/29 02:51:39 kumba Exp $
+
+  28 Dec 2003; Joshua Kinard <kumba@gentoo.org> expat-1.95.6-r1.ebuild:
+  Move to mips stable (~mips -> mips)
 
 *expat-1.95.7 (09 Nov 2003)
 
